[package]
name = "archery-timer"
description = "My personalized desktop environment for Hyprland"
repository = "https://github.com/sploders101/hyprdusk"
license = "GPL-3.0-only"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dbus = "0.9.7"
gdk = "0.18.0"
gio = "0.18.3"
glib = "0.18.3"
grass = { version = "0.13.1", features = ["macro"] }
gtk = "0.18.1"
rodio = { version = "0.21.1", features = ["mp3"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.34.0", features = ["full"] }
gpio-cdev = { version = "0.6.0", features = ["async-tokio"] }
futures = "0.3.31"
log = "0.4.27"
simplelog = "0.12.2"
